contrast fixes

--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@ main {
   padding: 3rem 2.25rem;
 
   /* Contrast too low with white text */
-  color: var(--clr-neutral-100);
+  /* color: var(--clr-neutral-100); */
 
-  /* color: var(--clr-neutral-200); */
+  color: var(--clr-neutral-200);
 }
 
 .download__title {
@@ -242,13 +242,13 @@ main {
   --bg-color: var(--clr-accent-cyan);
 
   /* Contrast too low with white text */
-  /* --text-color: var(--clr-neutral-200); */
+  --text-color: var(--clr-neutral-200);
 }
 
 /* Low contrast fix */
-/* .download__link:is(:hover, :focus-visible)::before {
+.download__link:is(:hover, :focus-visible)::before {
   filter: brightness(0);
-} */
+}
 
 .download__link--android:is(:hover, :focus-visible) {
   --bg-color: var(--clr-accent-yellow);
